<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Map of Species</string>
    <string name="action_search">Search</string>
    <string name="action_map_type_normal">Normal</string>
    <string name="action_map_type_hybrid">Hybrid</string>
    <string name="action_map_type_satellite">Satellite</string>
    <string name="action_map_type_terrain">Terrain</string>
    <string name="action_map_clear">Clear map</string>
    <string name="action_settings">Settings</string>
    <string name="title_search_synonyms">List of synonyms for</string>
    <string name="subtext_search_synonyms">Select synonyms to download</string>
    <string name="action_download_data_gbif">Downloading data from GBIF...</string>
    <string name="total_records">Total records:</string>
    <string name="action_download_canceled">Download canceled</string>
    <string name="action_search_canceled">Search canceled</string>
    <string name="connection_failed">There is no internet connection</string>
    <string name="action_download">Download</string>
    <string name="action_search_synonyms">Searching synonyms from GBIF...</string>
    <string name="no_records_found">No records found</string>
    <string name="acion_search_occurrences">Searching occurrences from GBIF...</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_options_category_title">General options</string>
    <string name="search_options_category_title">Search options</string>
    <string name="no_synonyms_found">No synonyms found</string>
    <string name="kind_records_title">Kind of records</string>
    <string name="kind_records_summary">Select the kind of records to download</string>
    <string name="map_type_title">Map type</string>
    <string name="map_type_summary">Select the default map type</string>
    <string name="action_map_save">Save map</string>
    <string name="action_map_load">Load map</string>
    <string name="action_map_delete">Delete map</string>
    <string name="dialog_enter_name">Enter the name of the map</string>
    <string name="dialog_load_name">Select the map to load</string>
    <string name="dialog_delete_name">Select the map to delete</string>
    <string name="title_activity_search_results">Search results</string>
    <string name="action_save_data">Saving data...</string>
    <string name="error_saving_data">No data have been saved. Please try again</string>
    <string name="no_data">No saved data</string>
    <string name="action_load_data">Loading data...</string>
    <string name="action_delete_data">Deleting data...</string>
    <string name="no_markers">There are no markers on the map</string>
    <string name="action_rendering_map">Rendering map...</string>
    <string name="empty_name">Not allowed empty names</string>
    <string name="action_data_saved">Data have been saved</string>
    <string name="action_data_loaded">Data have been loaded</string>
    <string name="action_data_deleted">Data have been deleted</string>
    <string name="valid_records">are valid record(s)</string>
    <string name="action_drawing_markers">Drawing markers...</string>
    <string name="skip_records_00">Skip records in 0.0 coordinates</string>
    <string name="skip_duplicate_records">Skip records with same longitude and latitude coordinates</string>
    <string name="welcome_dialog_title">Connecting to GBIF online database</string>
    <string name="welcome_dialog_header">Before using this App, please first check the GBIF data use agreement:</string>
    <string name="welcome_dialog_body">Press Accept to continue downloading data from GBIF. Otherwise press Cancel</string>
    <string name="drawer_open">Hello Drawer!</string>
    <string name="drawer_close">Goodbye Drawer!</string>
    <string name="title_dialog_select_species">Convex hull</string>
    <string name="dialog_select_species">Select species to apply the conxex hull</string>
    <string name="title_convex_hull_color">Convex hull color</string>
    <string name="summary_convex_hull_color">Select a color to use for filling</string>
    <string name="title_markers_color">Markers color</string>
    <string name="summary_markers_color">Select a color to use in markers</string>
    <string name="pick_color_button">Pick a color</string>
    <string name="dialog_select_color">Pick a color</string>
    <string name="subtext_dialog_select_color">Select a color from the list</string>
    <string name="action_drawing_convex_hull">Drawing convex hull...</string>
    <string name="seek_bar_title">Alpha channel</string>
    <string name="select_default_color_convex_hull">Select default color for fill</string>
    <string name="title_delete_history">Clear history</string>
    <string name="summary_delete_history">Clear the suggestion data</string>
    <string name="delete_history">The history has been removed</string>
    <string name="dialog_delete_history">Are you sure?</string>

    <string-array name="kind_records_entries">
        <item>Specimen</item>
        <item>Observation</item>
        <item>Living</item>
        <item>Germplasm</item>
        <item>Fossil</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="kind_records_values">
        <item>specimen</item>
        <item>observation</item>
        <item>living</item>
        <item>germplasm</item>
        <item>fossil</item>
        <item>unknown</item>
    </string-array>

    <string-array name="kind_records_default_values">
        <item>specimen</item>
        <item>observation</item>
    </string-array>

    <string-array name="map_type_entries">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <string-array name="map_type_values">
        <item>normal</item>
        <item>hybrid</item>
        <item>satellite</item>
        <item>terrain</item>
    </string-array>

    <string-array name="drawer_options">
        <item>Save map</item>
        <item>Load map</item>
        <item>Delete map</item>
        <item>Clear map</item>
        <item>Convex hull</item>
        <item>Settings</item>
    </string-array>

    <array name="drawer_icons">
        <item>@drawable/ic_action_save_dark</item>
        <item>@drawable/ic_action_storage_dark</item>
        <item>@drawable/ic_action_discard_dark</item>
        <item>@drawable/ic_action_place_dark</item>
        <item>@drawable/ic_action_convex_hull_dark</item>
        <item>@drawable/ic_action_settings_dark</item>
    </array>

    <string-array name="colors">
        <item>Azure</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Rose</item>
        <item>Violet</item>
        <item>Yellow</item>
    </string-array>

    <array name="color_icons">
        <item>@drawable/ic_color_azure</item>
        <item>@drawable/ic_color_blue</item>
        <item>@drawable/ic_color_cyan</item>
        <item>@drawable/ic_color_green</item>
        <item>@drawable/ic_color_magenta</item>
        <item>@drawable/ic_color_orange</item>
        <item>@drawable/ic_color_red</item>
        <item>@drawable/ic_color_rose</item>
        <item>@drawable/ic_color_violet</item>
        <item>@drawable/ic_color_yellow</item>
    </array>

</resources>
